# high-dimensional-sampling

./: .gitignore  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  NOTICE  README.md  README.rst  diver_plot.py  setup.cfg  setup.py
.github/workflows/: hds-ci.yml  linter.yml
Paper/: .gitignore  HighDimensionalSampling.bib  HighDimensionalSampling.tex  JHEP.bst  JHEP3.cls  nested_sampling.py
docs/: Makefile  conf.py  index.rst  make.bat
examples/: DynWrapper.py  bo_turbo.py  functionfeeder.py  functionfeeder_advanced.py  gpyopt_hds_interface.py  nested_sampling_hds_interface.py  particlefilter.py  performing_an_experiment.py  plot_1d_testfunction.py  plot_2d_testfunction.py  plot_testfunctions.py  process_results.py  pyscannerbit_hds_interface.py  random_optimisation.py  rejection_sampling.py  testfunction_interfaces.py  using_testfunctions.py
experiments/: README.md  diver_mssm7.py  diver_plot.py  pso_plot.py  template.py
high_dimensional_sampling/: __init__.py  experiments.py  functions.py  methods.py  procedures.py  testfunctions.py  utils.py
high_dimensional_sampling/optimisation/: __init__.py  ampgo.py  cma-es_optimisation.py  cmaesoptimisation.py  gaussianparticlefilter.py  gpyopt.py  hdsparticlefilter.py  particlefilter.py  pygmo.py  pyscannerbit.py  randomoptimisation.py  turbo.py
high_dimensional_sampling/plotting/: __init__.py  style.py
high_dimensional_sampling/posterior/: __init__.py  dynastysampler.py  nestedsampling.py  rejectionsampling.py
manual/: 01_creating_a_method.md  01_creating_a_procedure.md  02_using_testfunctions.md  03_selecting_and_looping_over_testfunctions.md  04_running_an_experiment.md
pyscannerbit/: CHANGES.txt  CMakeCache.txt  CMakeLists.txt  INSTALL  LICENSE  MANIFEST.in  README.md  grab_ScannerBit.sh  grab_mods.sh  requirements.txt  setup.py
pyscannerbit/docs/source/: conf.py  index.rst
pyscannerbit/docs/source/examples/: all_scanners.rst
pyscannerbit/docs/source/usage/: installation.rst  quick_start.rst  raw_api.rst
pyscannerbit/pyscannerbit/: defaults.py  hdf5_help.py  plotting.py  plottools.py  processify.py  scan.py  utils.py
pyscannerbit/pyscannerbit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pyscannerbit/pyscannerbit_run_data/badass_scan/samples/: results.hdf5
pyscannerbit/pyscannerbit_run_data/pso_scan/samples/: results.hdf5
pyscannerbit/pyscannerbit_run_data/pso_scan/scanner_plugins/j-Swarm/: native.lastgen  native.settings.yaml
pyscannerbit/pyscannerbit_run_data/random_scan/samples/: results.hdf5
pyscannerbit/pyscannerbit_run_data/toy_mcmc_scan/samples/: results.hdf5
pyscannerbit/pyscannerbit_run_data/twalk_scan/samples/: results.hdf5
pyscannerbit/pyscannerbit_run_data/twalk_scan/scanner_plugins/temp_files/: twalk__t__scanner__v__1_0_1__0  twalk__t__scanner__v__1_0_1__0_temp_0
pyscannerbit/tests/: basic_test.py  default.py  example.py  import_yaml.py  interface_test.py  sb.py  scan_object_test.py  test.py  test.yaml  test_all_scanners.py  test_import.py  tests.py
pyscannerbit/tests/pyscannerbit_run_data/badass_scan/samples/: results.hdf5
pyscannerbit/tests/pyscannerbit_run_data/pso_scan/samples/: results.hdf5
pyscannerbit/tests/pyscannerbit_run_data/pso_scan/scanner_plugins/j-Swarm/: native.lastgen  native.settings.yaml
pyscannerbit/tests/pyscannerbit_run_data/random_scan/samples/: results.hdf5
pyscannerbit/tests/pyscannerbit_run_data/toy_mcmc_scan/samples/: results.hdf5
pyscannerbit/tests/pyscannerbit_run_data/twalk_scan/samples/: results.hdf5
pyscannerbit/tests/pyscannerbit_run_data/twalk_scan/scanner_plugins/temp_files/: twalk__t__scanner__v__1_0_1__0  twalk__t__scanner__v__1_0_1__0_temp_0
tests/: test_experiments.py  test_functionfeeder.py  test_functions.py  test_hiddenfunctions.py  test_high_dimensional_sampling.py  test_implementations.py  test_lint.py  test_load_functions.py  test_procedures.py  test_results.py  test_testfunction.py  test_utils.py
(+5 files in other folders)
